--- a/javascript_30/drum-kit-js/index-START.html
+++ b/javascript_30/drum-kit-js/index-START.html
@@ -23,39 +23,39 @@
     </div>
     <div data-key="70" class="key">
       <kbd>F</kbd>
-      <span class="sound">openhat</span>
+      <span class="sound">dirty</span>
     </div>
     <div data-key="71" class="key">
       <kbd>G</kbd>
-      <span class="sound">boom</span>
+      <span class="sound">bomb</span>
     </div>
     <div data-key="72" class="key">
       <kbd>H</kbd>
-      <span class="sound">ride</span>
+      <span class="sound">clean</span>
     </div>
     <div data-key="74" class="key">
       <kbd>J</kbd>
-      <span class="sound">snare</span>
+      <span class="sound">loose</span>
     </div>
     <div data-key="75" class="key">
       <kbd>K</kbd>
-      <span class="sound">tom</span>
+      <span class="sound">drop</span>
     </div>
     <div data-key="76" class="key">
       <kbd>L</kbd>
-      <span class="sound">tink</span>
+      <span class="sound">deadly</span>
     </div>
   </div>
 
   <audio data-key="65" src="sounds/clap.wav"></audio>
   <audio data-key="83" src="sounds/hihat.wav"></audio>
   <audio data-key="68" src="sounds/kick.wav"></audio>
-  <audio data-key="70" src="sounds/openhat.wav"></audio>
-  <audio data-key="71" src="sounds/boom.wav"></audio>
-  <audio data-key="72" src="sounds/ride.wav"></audio>
-  <audio data-key="74" src="sounds/snare.wav"></audio>
-  <audio data-key="75" src="sounds/tom.wav"></audio>
-  <audio data-key="76" src="sounds/tink.wav"></audio>
+  <audio data-key="70" src="sounds/fart-1.wav"></audio>
+  <audio data-key="71" src="sounds/fart-wav-3.wav"></audio>
+  <audio data-key="72" src="sounds/fart-wav-4.wav"></audio>
+  <audio data-key="74" src="sounds/fart-4.wav"></audio>
+  <audio data-key="75" src="sounds/fart-8.wav"></audio>
+  <audio data-key="76" src="sounds/fart-wav-2.wav"></audio>
 
 <script>
 
